# recommendation-system-mcp-postgres

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  schema.sql
scripts/: load_data.py  train_recs.py
src/mcp_postgres_explorer/: __init__.py  db.py  guard.py  recs.py  server.py
tests/: test_guard.py
