[project]
name = "mcp-postgres-explorer"
version = "0.1.0"
description = "MCP server for read-only analytics and ML recommendations over a Postgres database."
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.2", "psycopg[binary]>=3.2", "sqlglot>=25",
  "implicit>=0.7", "scipy>=1.11", "numpy>=1.26",
]
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest>=8", "pandas>=2", "openpyxl>=3.1"]

[project.scripts]
mcp-postgres-explorer = "mcp_postgres_explorer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_postgres_explorer"]

[tool.pytest.ini_options]
pythonpath = ["src"]
